// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`create branch with lockfiles change a package.json and generate its lockfile for pnpm 1`] = `
Object {
  "lock": "{\\"devDependencies\\":{\\"jest\\":\\"1.1.1\\"}}",
  "packageJson": "{\\"devDependencies\\":{\\"jest\\":\\"1.2.0\\"}}",
  "repositoryTokens": "",
  "type": "pnpm",
}
`;

exports[`create branch with lockfiles change one file (package.json) and generate its lockfile 1`] = `
Object {
  "lock": "{\\"devDependencies\\":{\\"jest\\":\\"1.1.1\\"}}",
  "packageJson": "{\\"devDependencies\\":{\\"jest\\":\\"1.2.0\\"}}",
  "repositoryTokens": "",
  "type": "npm",
}
`;

exports[`create branch with lockfiles change one file (package.json) and generate its lockfile with tokens 1`] = `
Object {
  "lock": "{\\"devDependencies\\":{\\"jest\\":\\"1.1.1\\"}}",
  "packageJson": "{\\"devDependencies\\":{\\"jest\\":\\"1.2.0\\"}}",
  "repositoryTokens": "{\\"npm\\":\\"12345\\",\\"github\\":\\"54321\\"}",
  "type": "npm",
}
`;

exports[`create branch with lockfiles change two files (package.json, frontend/package.json) and generate their lockfiles 1`] = `
Object {
  "lock": "{\\"devDependencies\\":{\\"jest\\":\\"1.1.1\\"}}",
  "packageJson": "{\\"devDependencies\\":{\\"jest\\":\\"1.2.0\\"}}",
  "repositoryTokens": "",
  "type": "npm",
}
`;

exports[`create branch with lockfiles change two files (package.json, frontend/package.json) and generate their lockfiles 2`] = `
Object {
  "lock": "{\\"devDependencies\\":{\\"jest\\":\\"1.1.1\\"}}",
  "packageJson": "{\\"devDependencies\\":{\\"jest\\":\\"1.2.0\\"}}",
  "repositoryTokens": "",
  "type": "npm",
}
`;

exports[`create branch with lockfiles don’t generate the same lockfile multiple times 1`] = `
Object {
  "lock": "{\\"devDependencies\\":{\\"jest\\":\\"1.1.1\\",\\"west\\":\\"1.1.1\\"}}",
  "packageJson": "{\\"devDependencies\\":{\\"jest\\":\\"1.2.0\\",\\"west\\":\\"1.5.0\\"}}",
  "repositoryTokens": "",
  "type": "npm",
}
`;

exports[`create branch with lockfiles handle exec server 500 gracefully 1`] = `
Object {
  "lock": "{\\"devDependencies\\":{\\"jest\\":\\"1.1.1\\"}}",
  "packageJson": "{\\"devDependencies\\":{\\"jest\\":\\"1.2.0\\"}}",
  "repositoryTokens": "",
  "type": "npm",
}
`;
